--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fontsource/poppins": "^5.1.1",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.4.1",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.2",
     "@types/bcryptjs": "^2.4.6",
