--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "recharts": "^2.15.1",
+    "resend": "^4.1.2",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
@@ -47,6 +48,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
