--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "lucide-react": "^0.474.0",
+    "mailtrap": "^4.0.0",
     "next": "15.1.6",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
