--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "email": "email dev",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -28,7 +29,6 @@
     "crypto": "^1.0.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
-    "mailtrap": "^4.0.0",
     "next": "15.1.6",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
