--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.2",
+    "@react-email/components": "^0.0.33",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.1",
     "class-variance-authority": "^0.7.1",
@@ -43,6 +45,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -57,6 +60,7 @@
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "prisma": "^6.4.1",
+    "react-email": "3.0.7",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
